--- a/index.html
+++ b/index.html
@@ -25,42 +25,46 @@
     <main>
         <div class="passo ativo" id="passo-0">
             <img src="casa-mal-assombrada-a-noite_1639-24844.avif" alt="Cenário do passo 0">
-            <p>Após um assassinato misterioso na mansão dos Richters, você é chamado para investigar. Existem várias pistas e suspeitos. Está preparado para desvendar o crime?</p>
-            <button class="btn-proximo" data-proximo="1">Sim, estou pronto para investigar!</button>
-            <button class="btn-proximo" data-proximo="2">Ainda não, preciso de mais tempo.</button>
+            <p>Você já presenciou alguma cena de machismo aqui na escola?</p>
+            <button class="btn-proximo" data-proximo="1">Sim, já presenciei!</button>
+            <button class="btn-proximo" data-proximo="2">Não, nunca presenciei.</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você decide começar a investigação. Onde você deseja procurar a primeira pista?</p>
+            <p>Você já praticou este tipo de coisa com alguém?</p>
             <img src="detetivi.jpeg" alt="Cenário do passo 1">
-            <button class="btn-proximo" data-proximo="3">Vistoriar o escritório da vítima</button>
-            <button class="btn-proximo" data-proximo="4">Interrogar os membros da família</button>
+            <button class="btn-proximo" data-proximo="1">Sim.</button>
+            <button class="btn-proximo" data-proximo="2">Não.</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Você decide que ainda não está pronto e prefere se preparar melhor para a investigação. Enquanto se prepara, pensa nas possíveis pistas que pode ter perdido.</p>
+            <p>Como você reagiu quado viu?</p>
             <img src="inicioduvida.jpeg" alt="Imagem de preparação e reflexão">
-        </div>
-        <div class="passo" id="passo-3">
-            <p>Ao vistoriar o escritório da vítima, você encontra uma pista crucial: um documento com uma lista de pessoas que tinham motivos para cometer o crime. Está pronto para seguir essa pista?</p>
-            <img src="fotoescritorio.jpeg" alt="Cenário do passo 3">
-            <button class="btn-proximo" data-proximo="5">Seguir a pista e interrogar os suspeitos</button>
+            <button class="btn-proximo" data-proximo="1">Fiquei assustado(a) e preferi me distânciar.</button>
+            <button class="btn-proximo" data-proximo="2">Defendi a vitíma e me posicionei.</button>
        </div>
+        <div class="passo" id="passo-3">
+            <p>De qual maneira vc interviria se visse uma cena desta?</p>
+            <img src="fotoescritorio.jpeg" alt="Cenário do passo 3">
+            <button class="btn-proximo" data-proximo="1">Separaria o conflito e defenderia a vitíma.</button>
+            <button class="btn-proximo" data-proximo="2">Chamaria alguém para me ajudar a resolver, pois teria receio.</button>
+        </div>
         <div class="passo" id="passo-4">
-            <p>Ao interrogar os membros da família, você descobre que todos tinham algo a esconder. Cada um deles tem uma história diferente. Agora você precisa decidir qual caminho seguir.</p>
+            <p>Alguém da sua familía pratica este tipo de comportamento?</p>
             <img src="interrogatorio.avif" alt="Cenário do passo 4">
-            <button class="btn-proximo" data-proximo="5">Seguir a pista e interrogar os suspeitos</button>
+            <button class="btn-proximo" data-proximo="1">Sim.</button>
+            <button class="btn-proximo" data-proximo="2">Não.</button>
         </div>
         <div class="passo" id="passo-5">
-            <p>Após seguir a pista e interrogar os suspeitos, você descobre que o crime está ligado a um segredo sombrio do passado da família. Você está pronto para revelar a verdade e enfrentar o assassino?</p>
+            <p>Você apoia a criação de uma página no instagram para incentivar as mulheres a pedirem ajuda?</p>
             <img src="procurandopista.avif" alt="Cenário do passo 5">
-            <button class="btn-proximo" data-proximo="6">Sim, estou pronto para revelar a verdade!</button>
-            <button class="btn-proximo" data-proximo="7">Desistir e deixar o caso sem solução</button>
+            <button class="btn-proximo" data-proximo="1">Sim, acho legal!</button>
+            <button class="btn-proximo" data-proximo="2">Não.</button>
         </div>
         <div class="passo" id="passo-6">
-            <p>O assassinato estava ligado à um desentendimento entre Derek Richter e seu filho Will Richter. Neste desentendimento Will mata o pai com uma facada, pois Derek ameaçava sua mãe que era ex exposa do Sr.Richter. Parabéns você solucionou o caso!</p>
+            <p>Finalizar!</p>
             <img src="cenario-passo0.webp" alt="caso resolvido ">
         </div>
         <div class="passo" id="passo-7">
-            <p>Você decide não enfrentar o caso e deixa o mistério sem solução. A mansão dos Richters permanece com seus segredos enterrados, e você se pergunta sobre o que poderia ter descoberto.</p>
+            <p>Você prefere não continuar o jogo.</p>
             <img src="detettivedepre.jpeg" alt="Imagem de reflexão e desânimo">
         </div>
     </main>
